overlay/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: step-certificates
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "house"
spec:
  tls:
    - hosts:
        - ca.apps.infra.house
      secretName: ca-cert
  rules:
    - host: ca.apps.infra.house
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  step-certificates
                port:
                  name: http
